# Server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_code.sh  install_dependency.sh  main.cpp
cmake-out/: CMakeCache.txt  Makefile  cmake_install.cmake
dummy_test/: CMakeLists.txt  dummy_client.cpp
dummy_test/grpc_test/: CMakeLists.txt  grpc_client.cpp
dummy_test/socket_test/: CMakeLists.txt  dummy_client.cpp
proto/: attach.proto  grpc_match.proto  message.proto  movement.proto  player_position.proto  state.proto  vector.proto
proto_build/: message.pb.cc  message.pb.h  movement.pb.cc  movement.pb.h  player_position.pb.cc  player_position.pb.h  state.pb.cc  state.pb.h  vector.pb.cc  vector.pb.h
srcs/: call_data.cpp  call_data.hpp  call_data_attach_player.cpp  call_data_attach_player.hpp  call_data_create_channel.cpp  call_data_create_channel.hpp  channel.cpp  channel.hpp  double_buffer.cpp  double_buffer.hpp  movement_prototype.cpp  movement_prototype.hpp  protobuf_mannager.cpp  protobuf_mannager.hpp  prototype.hpp  prototype_factory.cpp  prototype_factory.hpp  server.cpp  server.hpp  session.cpp  session.hpp
